# onnxruntime-yolov4-inferencing

./: README.md  meson.build
assets/models/yolov4/: .gitattributes
include/: ortobjectdetectionmodel.h  yolov4.h
src/: driver.cpp  yolov4.cpp
